# tyuiu-recommendations

./: .env  .gitattributes  .gitignore  Dockerfile  Readme.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.gigaide/: gigaide.properties
chroma/: chroma.sqlite3
data/: Applicants_With_Direction.csv  ТИУ Направления подготовки Бакалавриат.csv
datasets/: ВИ (1).xlsx
estimators/: gender_binarizer.joblib
file_store/: Мапинг_направлений_подготовки_2025.csv  Описание_направлений_подготовки.json
fitted_transformers/: applicants_scaler.joblib  foreign_citizenship_encoder.joblib  military_service_binarizer.joblib
migration/: env.py
migrations/: env.py
notebooks/: Processed_Directions.csv  add_id_direction.ipynb  concat_dfs.ipynb  directions_parser.ipynb  load_direction_json.ipynb  passing_points.ipynb  points_parser.ipynb  preprocessing.ipynb  preprocessing_pipeline.ipynb  process_directions.ipynb  rec_sys_example.ipynb  res_sys.ipynb  tyuiu_students_2019-2024.csv  tyuiu_unique_directions.csv  Проходные баллы 2019-2024.csv  Структурированные_направления_подготовки.json  Структурированные_направления_подготовки_с_id.json  ТИУ Направления подготовки Бакалавриат.csv  ТИУ_проходные_баллы_2014-2024.csv  ТИУ_проходные_баллы_2014.csv  ТИУ_проходные_баллы_2015.csv  ТИУ_проходные_баллы_2016.csv  ТИУ_проходные_баллы_2017.csv  ТИУ_проходные_баллы_2018.csv  ТИУ_проходные_баллы_2019-2024.csv  ТИУ_проходные_баллы_2019.csv  ТИУ_проходные_баллы_2020.csv  ТИУ_проходные_баллы_2021.csv  ТИУ_проходные_баллы_2022.csv  ТИУ_проходные_баллы_2023.csv  (+1 more)
(+200 files in other folders)
